tests/cases/parser/property_access/numeric_access_with_suffix.hash
// run=fail, stage=parse

main := () => {
    t := (1, 2);

    t.1u32
};
